Adjust min font-size to 16px to prevent zoom in on iOS

--- a/public/styles/forms.css
+++ b/public/styles/forms.css
@@ -9,15 +9,18 @@
     width: 100%;
     box-sizing: border-box;
 }
+
 @media screen and (min-width: 750px) {
     .form-main {
         max-width: 750px;
     }
 }
+
 .form-main h2 {
     font-size: 1.3rem;
     color: #525252;
     padding: 5px;
+    text-align: left;
 }
 
 .form-main h3 {
@@ -31,14 +34,18 @@
     text-align: left;
 }
 
-.form-main p, .form-main li, .form-main label{
-    font-size: 0.95rem;
-    line-height: 1.4rem;
+.form-main p {
     padding: 0px 20px;
+}
+
+.form-main p, .form-main li, .form-main label {
+    font-size: 1rem;
+    line-height: 1.4rem;
     color: #414141;
 }
-.form-main label{
-    display: inline;
+
+.form-main p+ul {
+    margin-top: -10px;
 }
 
 /*
@@ -49,6 +56,7 @@
     box-sizing: border-box;
     padding: 0.5em 0.7em;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
     outline: none;
     border: 1px solid #dddddd;
     border-radius: 4px;
@@ -75,8 +83,9 @@ input[type="checkbox"].form-input {
 /*
 * FORM BUTTON
 */
+
 .form-button {
-    font-size: 0.9em;
+    font-size: 1em;
     border: 1.5px solid #00000091;
     border-radius: 2px;
     outline: none;
@@ -169,7 +178,7 @@ input[type="checkbox"].form-input {
     display: block;
 }
 
-.form-transport-item label{
+.form-transport-item label {
     font-size: 0.88rem;
 }
 
