--- a/public/styles/misc.css
+++ b/public/styles/misc.css
@@ -18,7 +18,7 @@ html {
 
 @media screen and (min-width: 320px) {
     html {
-        font-size: calc(14px + (18 - 14) * ((100vw - 320px) / (750 - 320)));
+        font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (750 - 320)));
     }
 }
 
